# Path-Aware-Pruning-for-Web-Based-3D-Gaussian-Splatting-Deployment

./: .gitattributes  .gitignore  README.md  package-lock.json
experiments/effect-size-prestudy/: .gitignore  PROJECT_STATE.md  main.py  package-lock.json  package.json  pyproject.toml
experiments/effect-size-prestudy/data/: README.md
experiments/effect-size-prestudy/output/: FREE_ROAM_REPORT.md  PROTOCOL_COMPARISON.md  STAGE2_DIAGNOSIS.md  STAGE3_REPORT.md  STAGE4_POSE_CONSISTENCY.md  STAGE4_TANDT.md  best_formula.txt  checkpoint_context.json  diagnostic_path_components_kitchen.csv  effect_size_all.csv  effect_size_all_fixed_frustum.csv  effect_size_all_freeroam.csv  effect_size_all_pose_meta.csv  effect_size_counter.csv  effect_size_counter_freeroam.csv  effect_size_kitchen.csv  effect_size_kitchen_freeroam.csv  effect_size_room.csv  effect_size_room_freeroam.csv  effect_size_train.csv  effect_size_train_freeroam.csv  effect_size_truck.csv  effect_size_truck_freeroam.csv  lambda_sweep_kitchen.csv  lambda_sweep_kitchen_freeroam.csv  raster_importance_kitchen.csv  sparse_capture_counter.csv  sparse_capture_room.csv  sparse_keep_ratio_sweep.csv  timing.csv
experiments/effect-size-prestudy/scripts/: check_crossref.py  check_scene_scale.py  convert_colmap_to_poses.py  crossref_python.py  diagnose_pose_consistency.py  generate_crossref_fixture.py  generate_cube_scene.py  read_write_model.py  run_effect_size.py  run_lightgaussian_comparison.py  sanity_check_mipnerf360.py  setup_benchmark_data.sh  sparsify_kitchen.py  spatial_split.py
splat-transform-fork/: .gitignore  (+11 more)
(+163 files in other folders)
