[project]
name = "effect-size-prestudy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gsplat>=1.5.3",
    "lpips>=0.1.4",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "plyfile>=1.1.3",
    "pytest>=9.0.3",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
